--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "printplanet/contracts": "1.*",
     "printplanet/pipeline": "1.*",
     "printplanet/container": "1.*",
-    "printplanet/queue": "1.*"
+    "printplanet/queue": "1.*",
+    "printplanet/support": "1.*"
   },
   "autoload": {
     "psr-4": {
